# mimic

./: CMakeLists.txt  README.md  cmake-install.sh  ports.csv
extract/: 202010011400.10K.csv  202010011400.10K.pcap  Makefile  README.md  fe.cc  mimic-extract.cc  mimic-extract.cpp  ports.csv
replay/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.sh  unlimit.sh
replay/include/: connections.h  eventHandler.h  eventNotifier.h  eventQueue.h  fileWorker.h  mimic.h  pollHandler.h  utils.h
replay/src/: connections.cpp  eventHandler.cpp  eventNotifier.cpp  eventQueue.cpp  fileWorker.cpp  main.cpp  mimic-replay.cpp  mimic.cpp  pollHandler.cpp  utils.cpp
